Added mongo functionallity

--- a/public/index.html
+++ b/public/index.html
@@ -39,12 +39,11 @@
   <!-- end header -->
 
   <h1 class="headline">
-    We are currently working on a awesome new site.
+    We are currently working on a awesome new project.
   </h1>
 
   <p>
-    We have been spending long hours in order to <b>launch our new website.</b> We will offer freebies, a brand new blog
-    and featured content of our latest work. We are always with you!
+    We have been spending long hours in order to launch <b><a href="https://github.com/joola/joola.io/">joola.io</a></b>.<br /><br />If you would like to get updates on our progress, subscribe below.
   </p>
 
   <!-- BEGIN counter -->
@@ -64,6 +63,11 @@
   </h1>
 
   <div class="email">
+    
+    <div id="thankyou" style="display:none">
+      <p><strong>Thank you for subscribing!</strong></p>
+    </div>
+    
     <div id="subscribe">
       <div id="mesaj"></div>
       <form method="post" action="/subscribe" name="subscribeform" id="subscribeform">
